# ossa

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
checkpoints/: content_log_layer14.json  content_router_layer14.pt
src/ossa/: __init__.py  capture.py  router.py  sparse_attention.py  triton_kernel.py
src/ossa/bench/: content_train.py  full_train.py  micro_train.py  multi_layer_ppl.py  multi_layer_train.py  plot_results.py  router_sweep.py  sparse_forward.py  sparsity.py  sweep_k.py  wallclock.py  wikitext_eval.py
tests/: test_basic.py  test_sparse_attention.py
