[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossa"
version = "0.0.1"
description = "Open Sparse Subquadratic Attention — a training-light retrofit recipe."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "NARE Labs" }]
dependencies = [
    "numpy>=1.24",
    "torch>=2.1",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
